# autogen-distributed-chat

./: .gitignore  README.md  pyproject.toml  run.sh  stop.sh
src/: _publisher.py  _utils.py  config.yaml  requirements.txt  run.sh
src/agents/: base_group_chat_agent.py  group_chat_manager.py  ui_agent.py
src/process_runners/: run_editor_agent.py  run_group_chat_manager.py  run_ui.py  run_writer_agent.py
