[project]
name = "autogen-distributed-chat"
version = "0.1.0"
description = "AutoGen distributed chat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen>=0.9.9",
    "autogen-core>=0.7.4",
    "autogen-ext>=0.7.4",
    "azure-identity>=1.24.0",
    "chainlit<2.7.0",
    "openai>=1.100.2",
    "rich>=14.1.0",
]
